# Ax-Shell

./: .gitignore  LICENSE  README.md  install.sh  main.css  main.py  pyproject.toml  uninstall.sh  version.json
config/: config.json  config.py  data.py  dock.json  settings_constants.py  settings_gui.py  settings_utils.py
config/hypr/: ax-shell.conf  colors.conf  hyprlock.conf
modules/: bar.py  buttons.py  calendar.py  cavalcade.py  cliphist.py  controls.py  corners.py  dashboard.py  dock.py  icons.py  kanban.py  launcher.py  metrics.py  mixer.py  network.py  notch.py  notifications.py  overview.py  pins.py  player.py  power.py  systemprofiles.py  systemtray.py  tools.py  updater.py  wallpapers.py  weather.py  widgets.py
modules/upower/: __init__.py  upower.py
scripts/: hyprland_multimonitor_config.conf  screenshot.sh  toggle_launcher.py  toggle_overview.py
services/: brightness.py  conversion.py  monitor_focus.py  network.py
styles/: applets.css  bar.css  buttons.css  colors.css  controls.css  metrics.css  notch.css  shadows.css  systemprofiles.css  workspaces.css
utils/: async_subprocess.py  conversion.py  global_keybinds.py  monitor_manager.py  version.json
widgets/: wayland.py
