[project]
name = "ax-shell"
version = "0.1.0"
description = "Ax-Shell - A modern desktop shell for Linux"
requires-python = ">=3.11"
dependencies = [
    "PyGObject>=3.40",
    "pycairo>=1.20.0",
    "loguru>=0.7.0",
    "setproctitle>=1.3.0",
    "psutil>=5.9.0",
    "pillow>=9.0.0",
    "requests>=2.28.0",
    "pywayland>=0.4.0",
    "pyxdg>=0.28",
    "watchdog>=2.1.0",
    "numpy>=1.21.0",
    "lxml>=4.9.0",
    "urwid>=2.1.0",
    "dbus-python>=1.2.0",
    "pyinotify>=0.9.6",
    "trash-cli>=0.24.0",
    "ijson>=3.0.0",
    "toml>=0.10.0",
    "fabric",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
fabric = { git = "https://github.com/Fabric-Development/fabric.git" }
